Sculpting Tab resetting Bug #61032

Closed
opened 2019-01-30 19:02:20 +01:00 by Vamshi Goud · 10 comments

System Information
Operating system:Windows 10
Graphics card: Zotac GTX 750Ti

Blender Version
Broken: 957b4547ae
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
Undoing in sculpting tab resets the whole work space to Object mode
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Open Blender with the Default Cube,
Got to Sculpting WorkSpace/Tab,
Do some Editing and Press Ctrl+Z
The whole thing changes to Object Mode.

**System Information** Operating system:Windows 10 Graphics card: Zotac GTX 750Ti **Blender Version** Broken: 957b4547aeeb (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** Undoing in sculpting tab resets the whole work space to Object mode **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Open Blender with the Default Cube, Got to Sculpting WorkSpace/Tab, Do some Editing and Press Ctrl+Z The whole thing changes to Object Mode.
Author

Added subscriber: @Neon_Finger

Added subscriber: @Neon_Finger

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this on my end. I go into object mode if there a no more sculpt strokes to undo.

Could you retry with the most recent blender beta?

I can not reproduce this on my end. I go into object mode if there a no more sculpt strokes to undo. Could you retry with the most recent blender beta?
Author

Desktop 2019.01.31 - 00.49.11.02.mp4
This is how you can recreate it.
Oh and I used a add-on to show how you can recreate the bug.
You guys are doing a great work.

[Desktop 2019.01.31 - 00.49.11.02.mp4](https://archive.blender.org/developer/F6456426/Desktop_2019.01.31_-_00.49.11.02.mp4) This is how you can recreate it. Oh and I used a add-on to show how you can recreate the bug. You guys are doing a great work.
Campbell Barton was assigned by Sebastian Parborg 2019-01-31 12:01:01 +01:00

Ok, so this is only a problem with the first sculpt stroke.
If you draw multiple strokes the undo for those work.
But when you get to the first stroke, it is undone AND you are put into object mode.

Ok, so this is only a problem with the first sculpt stroke. If you draw multiple strokes the undo for those work. But when you get to the first stroke, it is undone AND you are put into object mode.
Author

Yes, Exactly.

Yes, Exactly.

This issue was referenced by 77eaa4790d

This issue was referenced by 77eaa4790d370b5f8c3faa2ca65e8466a1259863

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Can I download it now?, Will it be fixed?

Can I download it now?, Will it be fixed?

If you don't want to build blender yourself, you have to wait until tomorrow for the build bot to have these changes.

If you don't want to build blender yourself, you have to wait until tomorrow for the build bot to have these changes.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61032
No description provided.